--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,14 +20,14 @@ edition = "2018"
 all-features = true
 
 [features]
-default = ["serde_yaml", "serde_json", "colored", "graphemes_support", "toml"]
+default = ["serde_yaml_ng", "serde_json", "colored", "graphemes_support", "toml"]
 graphemes_support = ["unicode-segmentation"]
 
 [dependencies]
 colored = { version = "2", optional = true }
 serde_json = { version = "1", optional = true }
 serde = { version = "1", features = ["derive"] }
-serde_yaml = { version = "0.8", optional = true }
+serde_yaml_ng = { version = "0.10", optional = true }
 unicode-segmentation = { version = "1", optional = true }
 toml = { version = "0.5", optional = true }
 
@@ -37,11 +37,11 @@ pretty_assertions = "0.7"
 
 [[example]]
 name = "serde_yaml"
-required-features = ["serde_yaml"]
+required-features = ["serde_yaml_ng"]
 
 [[example]]
 name = "serde_yaml_long"
-required-features = ["serde_yaml"]
+required-features = ["serde_yaml_ng"]
 
 [[example]]
 name = "serde_json"
